--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="col-xl-2">
                     <div class="logo">
                         <a href="index.html">
-                            <img src="images/CamClients logo.webp" alt="logo">
+                            <img src="Images/CamClients-logo.webp" alt="logo">
                         </a>
                     </div>
                 </div>
