--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                 <a class="nav-link" href="#">Pledges</a>
                               </li>
                               <li class="nav-item">
-                                <a class="nav-link" href="#">Talk</a>
+                                <a class="nav-link" href="index.html">Talk</a>
                               </li>
                               <li class="nav-item">
                                 <a class="nav-link" href="#">Store</a>
