--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
     </section>    
     <section class="main-navigation">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-xl-12">
                     <nav class="navbar navbar-expand-lg bg-body-tertiary p-0">
@@ -62,37 +62,37 @@
                           <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                             <ul class="navbar-nav">
                               <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="#">LIVE</a>
+                                <a class="nav-link nav-item-live" aria-current="page" href="#">LIVE</a>
                               </li>
                               <li class="nav-item">
-                                <a class="nav-link" href="#">Clips</a>
+                                <a class="nav-link nav-item-clips" href="#"><img src="./Icons/CamClients clip icon.svg" alt="Clips icon">Clips</a>
                               </li>
                               <li class="nav-item">
-                                <a class="nav-link" href="#">Premiers</a>
+                                <a class="nav-link nav-item-premiers" href="#"><img src="./Icons/CamClients premier icon.svg" alt="Premiers icon">Premiers</a>
                               </li>
                               <li class="nav-item">
                                 <a class="nav-link" href="#">Presentations</a>
                               </li>
                               <li class="nav-item">
-                                <a class="nav-link" href="#">VOD</a>
+                                <a class="nav-link nav-item-vod" href="#"><img src="./Icons/CamClients VOD icon.svg" alt="VOD icon">VOD</a>
                               </li>
                               <li class="nav-item">
-                                <a class="nav-link" href="#">Pledges</a>
+                                <a class="nav-link nav-item-Pledges" href="#"><img src="./Icons/CamClients Pledges icon.svg" alt="Pladges icon">Pledges</a>
                               </li>
                               <li class="nav-item">
-                                <a class="nav-link" href="index.html">Talk</a>
+                                <a class="nav-link nav-item-talk" href="index.html"><img src="./Icons/CamClients talk icon.svg" alt="Talk icon">Talk</a>
                               </li>
                               <li class="nav-item">
-                                <a class="nav-link" href="#">Store</a>
+                                <a class="nav-link nav-item-store" href="#"><img src="./Icons/CamClients Store icon.svg" alt="store icon">Store</a>
                               </li>
                               <li class="nav-item">
-                                <a class="nav-link" href="#">Auction</a>
+                                <a class="nav-link nav-item-auction" href="#"><img src="./Icons/CamClients auction icon.svg" alt="auction icon">Auction</a>
                               </li>
                               <li class="nav-item">
-                                <a class="nav-link" href="#">Girls</a>
+                                <a class="nav-link nav-item-girls" href="#"><img src="./Icons/CamClients girls icon.svg" alt="girls icon">Girls</a>
                               </li>
                               <li class="nav-item">
-                                <a class="nav-link" href="#">Play</a>
+                                <a class="nav-link nav-item-play" href="#"><img src="./Icons/CamClients play icon.svg" alt="Play icon">Play</a>
                               </li>
                               <li class="nav-item">
                                 <a class="nav-link" href="#">Lobby</a>
@@ -104,6 +104,60 @@
                 </div>
             </div>
         </div>
+    </section>
+    <section class="camclients-hero-section">
+      <div class="container-fluid m-0 p-0">
+        <div class="camclients-hero-content">
+          <div class="row">
+            <div class="col-xl-2">
+              <img src="./Images/image carousel item6.webp" alt="camclients hero image">
+            </div>
+            <div class="col-xl-2">
+              <img src="./Images/image carousel item5.webp" alt="camclients hero image">
+            </div>
+            <div class="col-xl-2">
+              <img src="./Images/image carousel item4.webp" alt="camclients hero image">
+            </div>
+            <div class="col-xl-2">
+              <img src="./Images/image carousel item3.webp" alt="camclients hero image">
+            </div>
+            <div class="col-xl-2">
+              <img src="./Images/image carousel item2.webp" alt="camclients hero image">
+            </div>
+            <div class="col-xl-2">
+              <img src="./Images/image carousel item1.webp" alt="camclients hero image">
+            </div>
+            <div class="col-xl-2">
+              <img src="./Images/image carousel item12.webp" alt="camclients hero image">
+            </div>
+            <div class="col-xl-2">
+              <img src="./Images/image carousel item11.webp" alt="camclients hero image">
+            </div>
+            <div class="col-xl-2">
+              <img src="./Images/image carousel item10.webp" alt="camclients hero image">
+            </div>
+            <div class="col-xl-2">
+              <img src="./Images/image carousel item9.webp" alt="camclients hero image">
+            </div>
+            <div class="col-xl-2">
+              <img src="./Images/image carousel item8.webp" alt="camclients hero image">
+            </div>
+            <div class="col-xl-2">
+              <img src="./Images/image carousel item7.webp" alt="camclients hero image">
+            </div>
+          </div>
+          <div class="camclient-hero-text">
+            <div class="row">
+              <div class="col-xl-12 text-center">
+                <h1>CAM CLIENTS</h1>
+                <h2>SEXT WITH YOUR FAVOURITE TODAY</h2>
+              </div>
+            </div>
+          </div>
+          
+        </div>
+        
+      </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
