--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.cdnfonts.com/css/arial-2" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:slnt,wght@-10..0,100..900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:slnt,wght@-10..0,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -119,11 +120,105 @@
         </div>
       </div>
     </section>
-    <section class="camclients-new-creator">
+    <section class="camclients-new-creator py-5">
       <div class="container">
         <div class="row">
-          <div class="col-xl-12">
-            
+          <div class="col-xl-12 mt-5">
+            <h2 class="text-center creator-heading"><span style="color:#EF377A;">New</span> Creators</h2>
+          </div>
+        </div>
+        <div class="creator-carousel-items mt-5">
+          <div class="row">
+            <div class="col-xl-2">
+                <div class="carousel-single-card text-center">
+                  <div class="carousel-single-image">
+                    <img src="./Images/CamClients Creators.webp" alt="Creators profile">
+                  </div>
+                  <div class="carousel-icons mt-3">
+                    <a href="#"><img src="./Icons/text massege icon.svg" alt="Text messages"></a>
+                    <a href="#"><img src="./Icons/audio call icon.svg" alt="Audio call"></a>
+                    <a href="#"><img src="./Icons/video call icon.svg" alt="Video Call"></a>
+                  </div>
+                  <div class="carousel-user-name mt-2">
+                    <h3>Mila Elaine</h3>
+                  </div>
+                </div> 
+            </div>
+            <div class="col-xl-2">
+                <div class="carousel-single-card text-center">
+                  <div class="carousel-single-image">
+                    <img src="./Images/CamClients Creator.webp" alt="Creators profile">
+                  </div>
+                  <div class="carousel-icons mt-3">
+                    <a href="#"><img src="./Icons/text massege icon.svg" alt="Text messages"></a>
+                    <a href="#"><img src="./Icons/audio call icon.svg" alt="Audio call"></a>
+                    <a href="#"><img src="./Icons/video call icon.svg" alt="Video Call"></a>
+                  </div>
+                  <div class="carousel-user-name mt-2">
+                    <h3>Paris Hilton</h3>
+                  </div>
+                </div> 
+            </div>
+            <div class="col-xl-2">
+                <div class="carousel-single-card text-center">
+                  <div class="carousel-single-image">
+                    <img src="./Images/CamClients Creators.webp" alt="Creators profile">
+                  </div>
+                  <div class="carousel-icons mt-3">
+                    <a href="#"><img src="./Icons/text massege icon.svg" alt="Text messages"></a>
+                    <a href="#"><img src="./Icons/audio call icon.svg" alt="Audio call"></a>
+                    <a href="#"><img src="./Icons/video call icon.svg" alt="Video Call"></a>
+                  </div>
+                  <div class="carousel-user-name mt-2">
+                    <h3>Mila Elaine</h3>
+                  </div>
+                </div> 
+            </div>
+            <div class="col-xl-2">
+                <div class="carousel-single-card text-center">
+                  <div class="carousel-single-image">
+                    <img src="./Images/CamClients Creator.webp" alt="Creators profile">
+                  </div>
+                  <div class="carousel-icons mt-3">
+                    <a href="#"><img src="./Icons/text massege icon.svg" alt="Text messages"></a>
+                    <a href="#"><img src="./Icons/audio call icon.svg" alt="Audio call"></a>
+                    <a href="#"><img src="./Icons/video call icon.svg" alt="Video Call"></a>
+                  </div>
+                  <div class="carousel-user-name mt-2">
+                    <h3>Paris Hilton</h3>
+                  </div>
+                </div> 
+            </div>
+            <div class="col-xl-2">
+                <div class="carousel-single-card text-center">
+                  <div class="carousel-single-image">
+                    <img src="./Images/CamClients Creators.webp" alt="Creators profile">
+                  </div>
+                  <div class="carousel-icons mt-3">
+                    <a href="#"><img src="./Icons/text massege icon.svg" alt="Text messages"></a>
+                    <a href="#"><img src="./Icons/audio call icon.svg" alt="Audio call"></a>
+                    <a href="#"><img src="./Icons/video call icon.svg" alt="Video Call"></a>
+                  </div>
+                  <div class="carousel-user-name mt-2">
+                    <h3>Mila Elaine</h3>
+                  </div>
+                </div> 
+            </div>
+            <div class="col-xl-2">
+                <div class="carousel-single-card text-center">
+                  <div class="carousel-single-image">
+                    <img src="./Images/CamClients Creator.webp" alt="Creators profile">
+                  </div>
+                  <div class="carousel-icons mt-3">
+                    <a href="#"><img src="./Icons/text massege icon.svg" alt="Text messages"></a>
+                    <a href="#"><img src="./Icons/audio call icon.svg" alt="Audio call"></a>
+                    <a href="#"><img src="./Icons/video call icon.svg" alt="Video Call"></a>
+                  </div>
+                  <div class="carousel-user-name mt-2">
+                    <h3>Paris Hilton</h3>
+                  </div>
+                </div> 
+            </div>
           </div>
         </div>
       </div>
