--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="col-xl-2">
                 <div class="carousel-single-card text-center">
                   <div class="carousel-single-image">
-                    <img src="./Images/CamClients Creator.webp" alt="Creators profile">
+                    <img src="./Images/CamClients Creators.webp" alt="Creators profile">
                   </div>
                   <div class="carousel-icons mt-3">
                     <a href="#"><img src="./Icons/text massege icon.svg" alt="Text messages"></a>
@@ -177,7 +177,7 @@
             <div class="col-xl-2">
                 <div class="carousel-single-card text-center">
                   <div class="carousel-single-image">
-                    <img src="./Images/CamClients Creator.webp" alt="Creators profile">
+                    <img src="./Images/CamClients Creators.webp" alt="Creators profile">
                   </div>
                   <div class="carousel-icons mt-3">
                     <a href="#"><img src="./Icons/text massege icon.svg" alt="Text messages"></a>
@@ -207,7 +207,7 @@
             <div class="col-xl-2">
                 <div class="carousel-single-card text-center">
                   <div class="carousel-single-image">
-                    <img src="./Images/CamClients Creator.webp" alt="Creators profile">
+                    <img src="./Images/CamClients Creators.webp" alt="Creators profile">
                   </div>
                   <div class="carousel-icons mt-3">
                     <a href="#"><img src="./Icons/text massege icon.svg" alt="Text messages"></a>
