--- a/index.html
+++ b/index.html
@@ -146,8 +146,38 @@
             </div>
             <div class="col-xl-2">
                 <div class="carousel-single-card text-center">
-                  <div class="carousel-single-image">
+                  <div class="carousel-single-image booked-creator">
+                    <img src="./Images/Camclients creator.webp" alt="Creators profile">
+                  </div>
+                  <div class="carousel-icons mt-3">
+                    <a href="#"><img src="./Icons/text massege icon.svg" alt="Text messages"></a>
+                    <a href="#"><img src="./Icons/audio call icon.svg" alt="Audio call"></a>
+                    <a href="#"><img src="./Icons/video call icon.svg" alt="Video Call"></a>
+                  </div>
+                  <div class="carousel-user-name mt-2">
+                    <h3>Paris Hilton</h3>
+                  </div>
+                </div> 
+            </div>
+            <div class="col-xl-2">
+                <div class="carousel-single-card text-center">
+                  <div class="carousel-single-image active-creator">
                     <img src="./Images/CamClients Creators.webp" alt="Creators profile">
+                  </div>
+                  <div class="carousel-icons mt-3">
+                    <a href="#"><img src="./Icons/text massege icon.svg" alt="Text messages"></a>
+                    <a href="#"><img src="./Icons/audio call icon.svg" alt="Audio call"></a>
+                    <a href="#"><img src="./Icons/video call icon.svg" alt="Video Call"></a>
+                  </div>
+                  <div class="carousel-user-name mt-2">
+                    <h3>Mila Elaine</h3>
+                  </div>
+                </div> 
+            </div>
+            <div class="col-xl-2">
+                <div class="carousel-single-card text-center">
+                  <div class="carousel-single-image active-creator">
+                    <img src="./Images/Camclients creator.webp" alt="Creators profile">
                   </div>
                   <div class="carousel-icons mt-3">
                     <a href="#"><img src="./Icons/text massege icon.svg" alt="Text messages"></a>
@@ -176,7 +206,7 @@
             </div>
             <div class="col-xl-2">
                 <div class="carousel-single-card text-center">
-                  <div class="carousel-single-image">
+                  <div class="carousel-single-image active-creator">
                     <img src="./Images/CamClients Creators.webp" alt="Creators profile">
                   </div>
                   <div class="carousel-icons mt-3">
@@ -187,35 +217,123 @@
                   <div class="carousel-user-name mt-2">
                     <h3>Paris Hilton</h3>
                   </div>
-                </div> 
+                </div>
             </div>
-            <div class="col-xl-2">
-                <div class="carousel-single-card text-center">
-                  <div class="carousel-single-image">
-                    <img src="./Images/CamClients Creators.webp" alt="Creators profile">
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="camclients-Trending-creator pb-5 ">
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-12 mt-4  ">
+            <h2 class="text-center camclients-Trending-creator-heading">Trending</h2>
+          </div>
+        </div>
+        <div class="camclients-Trending-carousel-items mt-4"> 
+          <div class="row">
+            <div class="col-xl">
+                <div class="camclients-Trending-carousel-single-card text-center">
+                  <div class="camclients-Trending-carousel-single-image">
+                    <img src="./Images/Camclients trending creator live.webp" alt="Creators profile">
                   </div>
-                  <div class="carousel-icons mt-3">
+                  <div class="camclients-Trending-carousel-icons mt-3">
                     <a href="#"><img src="./Icons/text massege icon.svg" alt="Text messages"></a>
                     <a href="#"><img src="./Icons/audio call icon.svg" alt="Audio call"></a>
                     <a href="#"><img src="./Icons/video call icon.svg" alt="Video Call"></a>
                   </div>
-                  <div class="carousel-user-name mt-2">
+                  <div class="camclients-Trending-user-name mt-2">
                     <h3>Mila Elaine</h3>
                   </div>
                 </div> 
             </div>
-            <div class="col-xl-2">
-                <div class="carousel-single-card text-center">
-                  <div class="carousel-single-image">
-                    <img src="./Images/CamClients Creators.webp" alt="Creators profile">
+            <div class="col-xl">
+                <div class="camclients-Trending-carousel-single-card text-center">
+                  <div class="camclients-Trending-carousel-single-image">
+                    <img src="./Images/Camclients trending creators booked.webp" alt="Creators profile">
                   </div>
-                  <div class="carousel-icons mt-3">
+                  <div class="camclients-Trending-carousel-icons mt-3">
                     <a href="#"><img src="./Icons/text massege icon.svg" alt="Text messages"></a>
                     <a href="#"><img src="./Icons/audio call icon.svg" alt="Audio call"></a>
                     <a href="#"><img src="./Icons/video call icon.svg" alt="Video Call"></a>
                   </div>
-                  <div class="carousel-user-name mt-2">
-                    <h3>Paris Hilton</h3>
+                  <div class="camclients-Trending-user-name mt-2">
+                    <h3>Mila Elaine</h3>
+                  </div>
+                </div> 
+            </div>
+            <div class="col-xl">
+                <div class="camclients-Trending-carousel-single-card text-center">
+                  <div class="camclients-Trending-carousel-single-image">
+                    <img src="./Images/Camclients trending creators live.webp" alt="Creators profile">
+                  </div>
+                  <div class="camclients-Trending-carousel-icons mt-3">
+                    <a href="#"><img src="./Icons/text massege icon.svg" alt="Text messages"></a>
+                    <a href="#"><img src="./Icons/audio call icon.svg" alt="Audio call"></a>
+                    <a href="#"><img src="./Icons/video call icon.svg" alt="Video Call"></a>
+                  </div>
+                  <div class="camclients-Trending-user-name mt-2">
+                    <h3>Mila Elaine</h3>
+                  </div>
+                </div> 
+            </div>
+            <div class="col-xl">
+                <div class="camclients-Trending-carousel-single-card text-center">
+                  <div class="camclients-Trending-carousel-single-image">
+                    <img src="./Images/Camclients trending creator active.webp" alt="Creators profile">
+                  </div>
+                  <div class="camclients-Trending-carousel-icons mt-3">
+                    <a href="#"><img src="./Icons/text massege icon.svg" alt="Text messages"></a>
+                    <a href="#"><img src="./Icons/audio call icon.svg" alt="Audio call"></a>
+                    <a href="#"><img src="./Icons/video call icon.svg" alt="Video Call"></a>
+                  </div>
+                  <div class="camclients-Trending-user-name mt-2">
+                    <h3>Mila Elaine</h3>
+                  </div>
+                </div> 
+            </div>
+            <div class="col-xl">
+                <div class="camclients-Trending-carousel-single-card text-center">
+                  <div class="camclients-Trending-carousel-single-image">
+                    <img src="./Images/Camclients trending creator booked.webp" alt="Creators profile">
+                  </div>
+                  <div class="camclients-Trending-carousel-icons mt-3">
+                    <a href="#"><img src="./Icons/text massege icon.svg" alt="Text messages"></a>
+                    <a href="#"><img src="./Icons/audio call icon.svg" alt="Audio call"></a>
+                    <a href="#"><img src="./Icons/video call icon.svg" alt="Video Call"></a>
+                  </div>
+                  <div class="camclients-Trending-user-name mt-2">
+                    <h3>Mila Elaine</h3>
+                  </div>
+                </div> 
+            </div>
+            <div class="col-xl">
+                <div class="camclients-Trending-carousel-single-card text-center">
+                  <div class="camclients-Trending-carousel-single-image">
+                    <img src="./Images/Camclients trending creators active.webp" alt="Creators profile">
+                  </div>
+                  <div class="camclients-Trending-carousel-icons mt-3">
+                    <a href="#"><img src="./Icons/text massege icon.svg" alt="Text messages"></a>
+                    <a href="#"><img src="./Icons/audio call icon.svg" alt="Audio call"></a>
+                    <a href="#"><img src="./Icons/video call icon.svg" alt="Video Call"></a>
+                  </div>
+                  <div class="camclients-Trending-user-name mt-2">
+                    <h3>Mila Elaine</h3>
+                  </div>
+                </div> 
+            </div>
+            <div class="col-xl">
+                <div class="camclients-Trending-carousel-single-card text-center">
+                  <div class="camclients-Trending-carousel-single-image">
+                    <img src="./Images/Camclients trending creator book.webp" alt="Creators profile">
+                  </div>
+                  <div class="camclients-Trending-carousel-icons mt-3">
+                    <a href="#"><img src="./Icons/text massege icon.svg" alt="Text messages"></a>
+                    <a href="#"><img src="./Icons/audio call icon.svg" alt="Audio call"></a>
+                    <a href="#"><img src="./Icons/video call icon.svg" alt="Video Call"></a>
+                  </div>
+                  <div class="camclients-Trending-user-name mt-2">
+                    <h3>Mila Elaine</h3>
                   </div>
                 </div> 
             </div>
