--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="col-xl-2 my-auto">
                     <div class="dropdown">
-                        <a class="btn text-white dropdown-toggle topbartoggle" href="#" role="button"data-bs-toggle="dropdown" aria-expanded="false">Sites<a>
+                        <a class="btn text-white dropdown-toggle topbartoggle" href="#" role="button"data-bs-toggle="dropdown" aria-expanded="false">Sites ▼<a>
                         <ul class="dropdown-menu">
                           <li><a class="dropdown-item" href="#">Site 1</a></li>
                           <li><a class="dropdown-item" href="#">Site 2</a></li>
@@ -50,7 +50,8 @@
                 </div>
             </div>
         </div>
-    </section>    
+    </section>
+
     <section class="main-navigation">
         <div class="container-fluid">
             <div class="row">
@@ -63,7 +64,7 @@
                           <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                             <ul class="navbar-nav">
                               <li class="nav-item">
-                                <a class="nav-link nav-item-live" aria-current="page" href="#">LIVE</a>
+                                <a class="nav-link nav-item-live" aria-current="page" href="#">LIVE<img src="./Icons/CamClients live icon.svg" alt="live icon"></a>
                               </li>
                               <li class="nav-item">
                                 <a class="nav-link nav-item-clips" href="#"><img src="./Icons/CamClients clip icon.svg" alt="Clips icon">Clips</a>
@@ -106,6 +107,7 @@
             </div>
         </div>
     </section>
+    
     <section class="camclients-hero-section">
       <div class="container-fluid m-0 p-0">
         <div class="camclients-hero-content">
@@ -120,6 +122,7 @@
         </div>
       </div>
     </section>
+
     <section class="camclients-new-creator py-5">
       <div class="container">
         <div class="row">
@@ -223,6 +226,7 @@
         </div>
       </div>
     </section>
+
     <section class="camclients-Trending-creator pb-5 ">
       <div class="container">
         <div class="row">
@@ -332,7 +336,7 @@
                     <a href="#"><img src="./Icons/audio call icon.svg" alt="Audio call"></a>
                     <a href="#"><img src="./Icons/video call icon.svg" alt="Video Call"></a>
                   </div>
-                  <div class="camclients-Trending-user-name mt-2">
+                  <div class="camclients-Trending-user-name mt-2">  
                     <h3>Mila Elaine</h3>
                   </div>
                 </div> 
@@ -341,6 +345,7 @@
         </div>
       </div>
     </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
