--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
         </div>
     </section>
-    
+
     <section class="camclients-hero-section">
       <div class="container-fluid m-0 p-0">
         <div class="camclients-hero-content">
@@ -130,8 +130,12 @@
             <h2 class="text-center creator-heading"><span style="color:#EF377A;">New</span> Creators</h2>
           </div>
         </div>
-        <div class="creator-carousel-items mt-5"> 
-          <div class="row">
+        <div class="carousel-buttons p-0 m-0">
+          <button class="left-button"><img src="./Icons/caret-left.svg" alt="carousel item button"></button>
+          <button class="right-button"><img src="./Icons/caret-right.svg" alt="carousel item button"></button>
+        </div>
+        <div class="creator-carousel-items mt-0"> 
+          <div class="row px-5">
             <div class="col-xl-2">
                 <div class="carousel-single-card text-center">
                   <div class="carousel-single-image">
@@ -230,12 +234,16 @@
     <section class="camclients-Trending-creator pb-5 ">
       <div class="container">
         <div class="row">
-          <div class="col-xl-12 mt-4  ">
+          <div class="col-xl-12 mt-5">
             <h2 class="text-center camclients-Trending-creator-heading">Trending</h2>
           </div>
+          <div class="carousel-buttons">
+            <button class="left-button"><img src="./Icons/caret-left.svg" alt="carousel item button"></button>
+            <button class="right-button"><img src="./Icons/caret-right.svg" alt="carousel item button"></button>
+          </div>
         </div>
-        <div class="camclients-Trending-carousel-items mt-4"> 
-          <div class="row">
+        <div class="camclients-Trending-carousel-items mt-0"> 
+          <div class="row px-5">
             <div class="col-xl">
                 <div class="camclients-Trending-carousel-single-card text-center">
                   <div class="camclients-Trending-carousel-single-image">
