--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
           <button class="left-button"><img src="./Icons/caret-left.svg" alt="carousel item button"></button>
           <button class="right-button"><img src="./Icons/caret-right.svg" alt="carousel item button"></button>
         </div>
-        <div class="creator-carousel-items mt-0"> 
-          <div class="row px-5">
+        <div class="creator-carousel-items mt-4"> 
+          <div class="row px-0">
             <div class="col-xl-2">
                 <div class="carousel-single-card text-center">
                   <div class="carousel-single-image">
@@ -237,12 +237,12 @@
           <div class="col-xl-12 mt-5">
             <h2 class="text-center camclients-Trending-creator-heading">Trending</h2>
           </div>
-          <div class="carousel-buttons">
+          <div class="camclients-Trending-creator-carousel-buttons z-1">
             <button class="left-button"><img src="./Icons/caret-left.svg" alt="carousel item button"></button>
             <button class="right-button"><img src="./Icons/caret-right.svg" alt="carousel item button"></button>
           </div>
         </div>
-        <div class="camclients-Trending-carousel-items mt-0"> 
+        <div class="camclients-Trending-carousel-items z-4 mt-0"> 
           <div class="row px-5">
             <div class="col-xl">
                 <div class="camclients-Trending-carousel-single-card text-center">
