--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <section class="camclients-new-creator py-5">
       <div class="container">
         <div class="row">
-          <div class="col-xl-12 mt-5">
+          <div class="col-xl-12 mt-5 mb-1">
             <h2 class="text-center creator-heading"><span style="color:#EF377A;">New</span> Creators</h2>
           </div>
         </div>
@@ -235,18 +235,23 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-12 mt-5">
-            <h2 class="text-center camclients-Trending-creator-heading">Trending</h2>
+            <h2 class="text-center camclients-Trending-creator-heading mb-0">Trending</h2>
           </div>
-          <div class="camclients-Trending-creator-carousel-buttons z-1">
+        </div>
+        <div class="row">
+          <div class="col-xl-12">
+            <div class="camclients-Trending-creator-carousel-buttons p-0 m-0">
             <button class="left-button"><img src="./Icons/caret-left.svg" alt="carousel item button"></button>
             <button class="right-button"><img src="./Icons/caret-right.svg" alt="carousel item button"></button>
           </div>
+          </div>
         </div>
-        <div class="camclients-Trending-carousel-items z-4 mt-0"> 
+        <div class="camclients-Trending-carousel-items mt-0"> 
           <div class="row px-5">
             <div class="col-xl">
                 <div class="camclients-Trending-carousel-single-card text-center">
                   <div class="camclients-Trending-carousel-single-image">
+                    <img class="trending-creator-status-icon" src="./Icons/live triangle 2.svg" alt="creator status">
                     <img src="./Images/Camclients trending creator live.webp" alt="Creators profile">
                   </div>
                   <div class="camclients-Trending-carousel-icons mt-3">
@@ -257,11 +262,12 @@
                   <div class="camclients-Trending-user-name mt-2">
                     <h3>Mila Elaine</h3>
                   </div>
-                </div> 
+                </div>
             </div>
             <div class="col-xl">
                 <div class="camclients-Trending-carousel-single-card text-center">
                   <div class="camclients-Trending-carousel-single-image">
+                    <img class="trending-creator-status-icon" src="./Icons/booked triangle 1.svg" alt="creator status">
                     <img src="./Images/Camclients trending creators booked.webp" alt="Creators profile">
                   </div>
                   <div class="camclients-Trending-carousel-icons mt-3">
@@ -277,6 +283,7 @@
             <div class="col-xl">
                 <div class="camclients-Trending-carousel-single-card text-center">
                   <div class="camclients-Trending-carousel-single-image">
+                    <img class="trending-creator-status-icon" src="./Icons/live triangle 1.svg" alt="creator status">
                     <img src="./Images/Camclients trending creators live.webp" alt="Creators profile">
                   </div>
                   <div class="camclients-Trending-carousel-icons mt-3">
@@ -292,6 +299,7 @@
             <div class="col-xl">
                 <div class="camclients-Trending-carousel-single-card text-center">
                   <div class="camclients-Trending-carousel-single-image">
+                    <img class="trending-creator-status-icon" src="./Icons/active triangle 1.svg" alt="creator status">
                     <img src="./Images/Camclients trending creator active.webp" alt="Creators profile">
                   </div>
                   <div class="camclients-Trending-carousel-icons mt-3">
@@ -307,6 +315,7 @@
             <div class="col-xl">
                 <div class="camclients-Trending-carousel-single-card text-center">
                   <div class="camclients-Trending-carousel-single-image">
+                    <img class="trending-creator-status-icon" src="./Icons/booked triangle 3.svg" alt="creator status">
                     <img src="./Images/Camclients trending creator booked.webp" alt="Creators profile">
                   </div>
                   <div class="camclients-Trending-carousel-icons mt-3">
@@ -322,6 +331,7 @@
             <div class="col-xl">
                 <div class="camclients-Trending-carousel-single-card text-center">
                   <div class="camclients-Trending-carousel-single-image">
+                    <img class="trending-creator-status-icon" src="./Icons/active triangle 3.svg" alt="creator status">
                     <img src="./Images/Camclients trending creators active.webp" alt="Creators profile">
                   </div>
                   <div class="camclients-Trending-carousel-icons mt-3">
@@ -337,6 +347,7 @@
             <div class="col-xl">
                 <div class="camclients-Trending-carousel-single-card text-center">
                   <div class="camclients-Trending-carousel-single-image">
+                    <img class="trending-creator-status-icon" src="./Icons/booked triangle-3.svg" alt="creator status">
                     <img src="./Images/Camclients trending creator book.webp" alt="Creators profile">
                   </div>
                   <div class="camclients-Trending-carousel-icons mt-3">
