--- a/index.html
+++ b/index.html
@@ -365,6 +365,61 @@
       </div>
     </section>
 
+    <section class="camclients-featured-callers pt-1 pb-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-12">
+            <h2 class="text-center creator-heading mb-5"><span style="color:#EF377A;">Featured</span> Callers</h2>
+          </div>
+        </div>
+        <div class="camclients-featured-callers-profile">
+          <div class="row">
+            <div class="col-xl-3 align-items-center">
+              <div class="featured-active-caller text-center mt-5 pt-5">
+                <div class="featured-active-caller-image">
+                  <img src="./Images/Camclients featured caller active.webp" alt="Active caller">
+                </div>
+                <div class="featured-caller-icon mt-3">
+                  <a href="#"><img src="./Icons/featured sms icon.svg" alt="Text messages"></a>
+                  <a href="#"><img src="./Icons/featured call icon.svg" alt="Audio call"></a>
+                </div>
+                <div class="featured-active-caller-name p-0 m-0">
+                  <h3>Paris Hilton</h3>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-6">
+              <div class="featured-booked-caller text-center">
+                <div class="featured-booked-caller-image">
+                  <img src="./Images/camclients featured caller.webp" alt="Active caller">
+                </div>
+                <div class="featured-caller-icon mt-3">
+                  <a href="#"><img src="./Icons/featured sms icon.svg" alt="Text messages"></a>
+                  <a href="#"><img src="./Icons/featured call icon.svg" alt="Audio call"></a>
+                </div>
+                <div class="featured-active-caller-name p-0 m-0">
+                  <h3>Kitty _ Kat</h3>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-3">
+              <div class="featured-active-caller text-center mt-5 pt-5">
+                <div class="featured-active-caller-image">
+                  <img src="./Images/Camclients featured active caller.webp" alt="Active caller">
+                </div>
+                <div class="featured-caller-icon mt-3">
+                  <a href="#"><img src="./Icons/featured sms icon.svg" alt="Text messages"></a>
+                  <a href="#"><img src="./Icons/featured call icon.svg" alt="Audio call"></a>
+                </div>
+                <div class="featured-active-caller-name p-0 m-0">
+                  <h3>Paris Hilton</h3>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
