--- a/Comingsoon.html
+++ b/Comingsoon.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cam Clients</title>
-    <link rel="stylesheet" href="Comingsoon.css">
+    <link rel="stylesheet" href="css/Comingsoon.css">
 </head>
 <body>
     <section class="comingsoon">
