--- a/index.html
+++ b/index.html
@@ -824,6 +824,23 @@
     </div>
   </div>
 </section>
+
+<section class="camclients-captains bgColor pb-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-xl-12">
+        <div class="camclients-captains-title">
+          <h2 style="color:#EF377A;" class="sec-headings text-center">Captains</h2>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xl-2">
+        
+      </div>
+    </div>
+  </div>
+</section>
   <script src="./js/bootstrap.bundle.min.js"></script>
   <script src="./js/bootstrap.min.js"></script>
 </body>
